Added feasiblity md and ignoring uploads folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+en_ca/pages/uploads/
+
 ## =============================================================================
 ##                !!! STOP. DO NOT MODIFY BELOW THIS LINE. !!!
 ## =============================================================================
