--- a/en_ca/config.json
+++ b/en_ca/config.json
@@ -1,6 +1,6 @@
 {
-    "useSideMenu": true,
+    "useSideMenu": false,
     "lineBreaks": "gfm",
-    "additionalFooterText": "All content and images &copy; by Your Name Goes Here&nbsp;",
+    "additionalFooterText": "Content and images &copy; by various authors as indicated&nbsp;",
     "anchorCharacter": "#"
 }
