Added period to footer text

--- a/en_ca/config.json
+++ b/en_ca/config.json
@@ -1,6 +1,6 @@
 {
     "useSideMenu": false,
     "lineBreaks": "gfm",
-    "additionalFooterText": "Content and images &copy; by various authors as indicated&nbsp;",
+    "additionalFooterText": "Content and images &copy; by various authors as indicated.&nbsp;",
     "anchorCharacter": "#"
 }
