--- a/en_ca/config.json
+++ b/en_ca/config.json
@@ -1,5 +1,5 @@
 {
-    "useSideMenu": true,
+    "useSideMenu": false,
     "lineBreaks": "gfm",
     "additionalFooterText": "Content and images &copy; by various authors as indicated.&nbsp;",
     "anchorCharacter": "#"
